trying to fix page height on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -68,4 +68,5 @@ html, body, #root, #app {
   height: -moz-available;
   height: -webkit-fill-available;
   height: fill-available;
+  position: fixed;
 }
